# medico24-ml

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: code-quality.yml
src/: __init__.py
tests/: __init__.py
