[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "medico24-ml"
version = "0.1.0"
description = "Machine learning module for Medico24 platform."
authors = [
    { name = "Medico24 Team", email = "contact@medico24.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "jupyter"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "black>=24.10.0",
    "isort>=5.13.2",
    "ruff>=0.8.0",
    "mypy",
    "bandit[toml]",
    "pydocstyle",
    "detect-secrets",
    "pre-commit"
]

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''
/(\.git|\.mypy_cache|\.ruff_cache|\.venv|venv|build|dist)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
split_on_trailing_comma = true
skip_gitignore = true
known_first_party = ["src"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist"
]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "B", "Q", "C90", "UP", "ANN", "ASYNC", "S", "BLE", "A", "COM", "C4", "DTZ", "T10", "EM", "ISC", "ICN", "G", "PIE", "T20", "PT", "Q", "RSE", "RET", "SIM", "TID", "ARG", "PTH", "ERA", "PD", "PL", "TRY", "NPY", "RUF"
]
ignore = [
    "E501", "ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "ANN204", "ANN401", "S101", "PLR0913", "COM812", "ISC001", "EM101", "EM102", "TRY003", "TRY300", "B904", "BLE001", "PLW0603", "PTH110", "RET504", "PLR2004", "RUF005", "SIM102", "S106", "S603", "TRY400", "ARG001", "DTZ003", "B008", "N818", "PLC0415", "S104", "S105", "ERA001"
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG", "PLR2004", "ANN", "T201", "E402", "DTZ003"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
strict_optional = false
warn_redundant_casts = true
warn_unused_ignores = false
check_untyped_defs = false
no_implicit_reexport = false
show_error_codes = true
exclude = ["tests", "venv", ".venv"]

[tool.bandit]
exclude_dirs = ["/tests", "/.venv", "/venv"]
skips = ["B101", "B601"]

[tool.pydocstyle]
convention = "google"
add_ignore = "D100,D104,D105,D107"
match = "(?!test_).*\\.py"
match_dir = "^(?!(tests|notebooks|scripts|\.))"
[tool.setuptools.packages.find]
where = ["src"]
